added card controls

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -86,8 +86,8 @@
     </div>
     <div class="page row pt-3 pr-3 d-flex flex-row flex-wrap" data-bind="foreach: items">
       <div class="col-lg-4 mb-3 d-flex" style="padding-right: 0">
-        <div class="card flex-fill">
-          <div class="card-img-top item-card-img-top" data-bind="style: {
+        <div class="card item-card flex-fill">
+          <div class="card-img-top item-card__img-top" data-bind="style: {
             'background-image': $parent.getItemImageURL(image_name),
             'background-position': 'center',
             'background-repeat': 'no-repeat',
@@ -96,6 +96,14 @@
           <div class="card-body">
             <h5 class="card-title" data-bind="text: name"></h5>
             <p class="card-text" data-bind="text: details"></p>
+            <div class="btn-group btn-group-sm item-card__controls">
+              <a class="card-link btn btn-outline-secondary">
+                edit
+              </a>
+              <a class="card-link btn btn-outline-secondary">
+                delete
+              </a>
+            </div>
           </div>
         </div>
       </div>
