added margin breakpoint for categories

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block mainContent %}
-<div class="row">
+<div class="row mb-5 pb-5">
   <aside
     id='categories'
-    data-bind="attr: { class: isEditing() ? 'mb-5 col-lg-4 category-list' :
-    'mb-5 col-lg-3 category-list'}">
+    data-bind="attr: { class: isEditing() ? 'col-lg-4 category-list' :
+    'col-lg-3 category-list'}">
     <div class="btn-group mb-3" role="group">
       <button
         type="button"
