--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -86,7 +86,7 @@
     </div>
     <div class="page row pt-3 pr-3 d-flex flex-row flex-wrap" data-bind="foreach: items">
       <div class="col-lg-4 mb-3 d-flex" style="padding-right: 0">
-        <div class="card item-card flex-fill">
+        <div class="card item-card box-shadow flex-fill">
           <div class="card-img-top item-card__img-top" data-bind="style: {
             'background-image': $parent.getItemImageURL(image_name),
             'background-position': 'center',
