installed popper.js

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -65,7 +65,7 @@
                 <a
                   href="#"
                   class="input-group-text"
-                  data-bind="click: $parent.deleteCategory.bind(this, id)">
+                  data-bind="click: $parent.toggleModal">
                     Delete
                 </a>
               </div>
@@ -111,7 +111,7 @@
   </main>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
