--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    {{ javascript_tag('venders') | safe }}
+    {{ javascript_tag('vender_css') | safe }}
     {% block head %}
       <title>
         {% block title %} Catalog {% endblock %}
