--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -110,8 +110,13 @@
     </div>
   </main>
 </div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -132,7 +137,7 @@
 </div>
 {% endblock %}
 {% block scripts %}
-  <script type="text/javascript">
+  <script defer type="text/javascript">
     (function() {
       // setup page ViewModel
       const page = new Page()
