--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -74,6 +74,39 @@
         </button>
       <!-- /ko -->
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Deleting a category will also delete all the items that belong to
+            that category.
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+              style="width: 100%">
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              style="width: 100%"
+              data-bind="">
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </aside>
   <main id="page" data-bind="attr: { class: isEditing() ? 'col-lg-8 page-container' : 'col-lg-9 page-container'}">
     <div class="d-flex justify-content-end align-items-baseline">
@@ -109,31 +142,6 @@
       </div>
     </div>
   </main>
-</div>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
 </div>
 {% endblock %}
 {% block scripts %}
