--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -100,7 +100,7 @@
               type="button"
               class="btn btn-danger"
               style="width: 100%"
-              data-bind="">
+              data-bind="click: deleteCategory">
               Delete
             </button>
           </div>
