--- a/app/templates/item/edit.html
+++ b/app/templates/item/edit.html
@@ -32,7 +32,8 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="text" class="form-control" name="name">
+          <input type="text" class="form-control" name="name" value="{{
+          item.name}}">
           <div class="input-group-append">
             <span class="input-group-text">
               Name
@@ -41,7 +42,12 @@
         </div>
         <div class="form-group mb-3">
           <label class="font-weight-bold text-muted" for="description">Description</label>
-          <textarea class="form-control" name="details" id="description" rows="3"></textarea>
+          <textarea
+            class="form-control"
+            name="details"
+            id="description"
+            rows="3">{{ item.details }}
+          </textarea>
         </div>
         <input class="btn btn-primary btn-lg btn-block" type="submit" value="CREATE">
       </form>
