changed edit item CTA to update

--- a/app/templates/item/edit.html
+++ b/app/templates/item/edit.html
@@ -49,7 +49,10 @@
             rows="3">{{ item.details }}
           </textarea>
         </div>
-        <input class="btn btn-primary btn-lg btn-block" type="submit" value="CREATE">
+        <input
+          class="btn btn-primary btn-lg btn-block"
+          type="submit"
+          value="UPDATE">
       </form>
     </div>
     <a class="btn btn-outline-secondary btn-cancel btn-lg d-block mb-5" href={{ url_for('category.allCategories') }}>
