renamed CreateItemViewModel to ItemViewModel

--- a/app/templates/item/edit.html
+++ b/app/templates/item/edit.html
@@ -65,10 +65,10 @@
   <script type="text/javascript">
     (function() {
       // set up CreateItemViewModel
-      const createItemViewModel = new CreateItemViewModel()
+      const itemViewModel = new ItemViewModel()
 
       // applyBindings
-      ko.applyBindings(createItemViewModel)
+      ko.applyBindings(itemViewModel)
     })()
   </script>
 {% endblock %}
