--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -137,10 +137,42 @@
               </a>
               <a
                 class="card-link btn btn-outline-secondary"
-                data-bind="click: $parent.deletButtonClick">
+                data-bind="click: $parent.toggleModal">
                 delete
               </a>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="confirmItemDeleteModal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Are you sure?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Deleting this item will make it disappear forever.
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+              style="width: 100%">
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              style="width: 100%"
+              data-bind="click: deleteItem">
+              Delete
+            </button>
           </div>
         </div>
       </div>
