item can be deleted from front end

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -170,7 +170,7 @@
               type="button"
               class="btn btn-danger"
               style="width: 100%"
-              data-bind="click: deleteItem">
+              data-bind="click: deleteItem.bind(this)">
               Delete
             </button>
           </div>
