--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -46,9 +46,7 @@
       <!-- ko foreach: categories -->
         <button
           class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          data-bind="
-            css: $parent.isActiveClass(id),
-            click: $parent.setActiveCategoryId.bind(this, id)">
+          data-bind="css: $parent.isActiveClass(id), click: $parent.setActiveCategoryId.bind(this, id)">
           <!-- ko ifnot: $parent.isEditing -->
             <span
               class="list-group-item__label"
