updated font-awesome to @fortawesome

--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -2,7 +2,7 @@
 {% block navLinks %}
   <li class="nav-item">
     <a href="{{ url_for('category.allCategories') }}" class="nav-link">
-      <i class="fa fa-angle-left"></i>
+      <i class="fas fa-angle-left"></i>
       back
     </a>
   </li>
