--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -66,7 +66,7 @@
                   href="#"
                   class="input-group-text"
                   data-bind="click: $parent.toggleModal">
-                  <i class="fa fa-trash-alt"></i>
+                  <i class="far fa-trash-alt"></i>
                 </a>
               </div>
             </div>
