added trash animation

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -64,7 +64,7 @@
               <div class="input-group-append">
                 <a
                   href="#"
-                  class="input-group-text"
+                  class="input-group-text link__icon"
                   data-bind="click: $parent.toggleModal">
                   <i class="far fa-trash-alt"></i>
                 </a>
@@ -136,9 +136,9 @@
                 edit
               </a>
               <a
-                class="card-link btn btn-outline-secondary"
+                class="card-link btn btn-outline-secondary link__icon"
                 data-bind="click: $parent.toggleModal">
-                delete
+                <i class="far fa-trash-alt"></i>
               </a>
             </div>
           </div>
