--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -2,8 +2,8 @@
 {% block navLinks %}
   <li class="nav-item">
     <a href="{{ url_for('category.allCategories') }}" class="nav-link">
-      <i class="fas fa-angle-left"></i>
-      back
+      <i class="fas fa-chevron-left"></i>
+      <span class="nav-link__label--expand-left">back</span>
     </a>
   </li>
 {% endblock %}
