--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -11,27 +11,6 @@
     <div class="card mb-4">
       <form class="card-body card-body-form" action={{ }} enctype=multipart/form-data method="POST">
         <div class="input-group mb-3">
-          <div
-            class="col-12 mb-3 image-upload-preview"
-            id="image-upload-preview"
-            style="background-image: url({{ url_for('api.image_file',
-            filename=item.image_name) }}); background-position: center;
-            background-size: cover"
-            data-bind="click: openFileChooser">
-          </div>
-          <input
-            type="file"
-            class="form-control"
-            id="image-input"
-            name="image"
-            data-bind="event: { change: displayImage }">
-          <div class="input-group-append">
-            <span class="input-group-text">
-              Image
-            </span>
-          </div>
-        </div>
-        <div class="input-group mb-3">
           <input type="text" class="form-control" name="name" value="{{
           item.name }}">
           <div class="input-group-append">
@@ -40,14 +19,14 @@
             </span>
           </div>
         </div>
-        <div class="form-group mb-3">
-          <label class="font-weight-bold text-muted" for="description">Description</label>
-          <textarea
-            class="form-control"
-            name="details"
-            id="description"
-            rows="3">{{ item.details }}
-          </textarea>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" name="name" value="{{
+          item.name }}">
+          <div class="input-group-append">
+            <span class="input-group-text">
+              Password
+            </span>
+          </div>
         </div>
         <input
           class="btn btn-primary btn-lg btn-block"
@@ -62,13 +41,4 @@
 </div>
 {% endblock %}
 {% block scripts %}
-  <script type="text/javascript">
-    (function() {
-      // set up CreateItemViewModel
-      const itemViewModel = new ItemViewModel()
-
-      // applyBindings
-      ko.applyBindings(itemViewModel)
-    })()
-  </script>
 {% endblock %}
