animated remove of flash messages

--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -208,6 +208,9 @@
 
       // set border radius for first visible category in list
       categoryList.setFirstCategoryBorderRadius()
+
+      // remove flash messages
+      categoryPageUtils.removeFlashMessages()
     })()
   </script>
 {% endblock %}
