--- a/app/templates/main.css
+++ b/app/templates/main.css
@@ -16,7 +16,7 @@ ul {
 }
 
 .flash-message {
-  background-color: #673AB7;
+  background-color: #26A69A;
   border: none;
   margin-top: 56px;
   padding: 0;
