--- a/app/templates/item/edit.html
+++ b/app/templates/item/edit.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block navLinks %}
   <li class="nav-item">
-    <a href="{{ url_for('category.allCategories') }}" class="nav-link">back</a>
+    <a href="{{ url_for('category.allCategories') }}" class="nav-link">
+      <i class="fas fa-chevron-left"></i>
+      <span class="nav-link__label">back</span>
+    </a>
   </li>
 {% endblock %}
 {% block mainContent %}
