--- a/app/templates/item/index.html
+++ b/app/templates/item/index.html
@@ -3,7 +3,7 @@
   <li class="nav-item">
     <a href="{{ url_for('category.allCategories') }}" class="nav-link">
       <i class="fas fa-chevron-left"></i>
-      <span class="nav-link__label--expand-left">back</span>
+      <span class="nav-link__label">back</span>
     </a>
   </li>
 {% endblock %}
