--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -12,6 +12,20 @@
     {% endwith %}
   </div>
 {% endblock %}
+{% block navCTA %}
+  {% if not current_user.is_authenticated %}
+    <a class="btn btn-outline-light" href={{ url_for('login.user_login') }}>
+      <strong>login</strong>
+    </a>
+    <a class="btn btn-outline-light" href={{ url_for('login.user_signup') }}>
+      <strong>sign up</strong>
+    </a>
+    {% else %}
+    <a class="btn btn-outline-light" href={{ url_for('login.disconnect') }}>
+      <strong>logout</strong>
+    </a>
+  {% endif %}
+{% endblock %}
 {% block mainContent %}
 <div class="row mb-5 pb-5">
   <aside
