--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block head %}
+{% block hero %}
   <div class="container-fluid flash-message">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
