styled github oauth button

--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -28,11 +28,13 @@
         {{ message }}
       {% endfor %}
     </h5>
-    <div class="col-lg text-center">
-      <a href="" class="btn btn-social btn-github">
-         <span class="fa fa-github"></span> Login with Github
-       </a>
-       <p>or</p>
+    <div class="col-lg text-center mb-4">
+        <a href="" class="btn-social mb-3">
+          <i class="fab fa-github fa-lg"></i>
+          <span>Login using Github</span>
+         </a>
+       <hr style="width: 25%"/>
+       <p>or login using your email and password</p>
     </div>
     <div class="card mb-4">
       <form class="card-body card-body-form" enctype=multipart/form-data method="POST">
