--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark
       text-light justify-content-between">
       {% block nav %}
-        <ul class="navbar-nav col">
+        <ul class="navbar-nav col ml-2">
           {% block navLinks %}
           {% endblock %}
         </ul>
