--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -14,16 +14,10 @@
 {% endblock %}
 {% block navCTA %}
   {% if not current_user.authenticated %}
-    <a class="nav-link" style="margin-top: .4rem" href={{ url_for('login.user_login') }}>
-      <strong>login</strong>
-    </a>
-    <a class="btn btn-outline-light mt-2 mb-2" href={{ url_for('login.user_signup') }}>
-      <strong>sign up</strong>
-    </a>
-    {% else %}
-    <a class="btn btn-outline-light" href={{ url_for('login.logout') }}>
-      <strong>logout</strong>
-    </a>
+    <a class="nav-link" style="margin-top: .4rem" href={{ url_for('login.user_login') }}>login</a>
+    <a class="btn btn-outline-light mt-2 mb-2" href={{ url_for('login.user_signup') }}>sign up</a>
+  {% else %}
+    <a class="btn btn-outline-light" href={{ url_for('login.logout') }}>logout</a>
   {% endif %}
 {% endblock %}
 {% block mainContent %}
