fixed flash-message spacing

--- a/app/templates/login/signup.html
+++ b/app/templates/login/signup.html
@@ -28,6 +28,13 @@
         {{ message }}
       {% endfor %}
     </h5>
+    <div class="col-lg text-center mb-4">
+        <a href="" class="btn-social mb-3">
+          <i class="fab fa-github fa-lg"></i>
+          <span>Signup using Github</span>
+         </a>
+       <hr style="width: 16%"/>
+    </div>
     <div class="card mb-4">
       <form class="card-body card-body-form" enctype=multipart/form-data method="POST">
         <h5 class="card-title text-center">Create an account</h5>
