--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,16 +13,16 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark
       text-light justify-content-between">
       {% block nav %}
-        <ul class="navbar-nav col ml-2">
+        <ul class="navbar__section navbar-nav col ml-2">
           {% block navLinks %}
           {% endblock %}
         </ul>
       {% endblock %}
-      <div class="d-flex col-lg justify-content-center">
+      <div class="navbar__section navbar__section-center d-flex col-lg justify-content-center">
         <a href="{{ url_for('category.allCategories') }}" class="nav-link
           text-white">CATALOG</a>
       </div>
-      <div class="d-flex col justify-content-end">
+      <div class="navbar__section d-flex col justify-content-end">
         {% block navCTA %}
         {% endblock %}
       </div>
