--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
+{% if current_user.authenticated and current_user.picture_url %}
+  {% block navLinks %}
+  <img
+    src="{{ current_user.picture_url }}"
+    alt="photo of {{ current_user.name }}"
+    class="mini-portrait"/>
+  {% endblock %}
+{% endif %}
 {% block navCTA %}
   {% if not current_user.authenticated %}
     <a class="nav-link align-self-center" href={{ url_for('login.user_login') }}>login</a>
@@ -219,6 +227,7 @@
 
       // remove flash messages
       categoryPageUtils.removeFlashMessages()
+
     })()
   </script>
 {% endblock %}
